hardhat scaffold environment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Frank Pobocek <frank@pobocek.com",
+  "author": "Frank Pobocek <frank@pobocek.com>",
   "licence": "MIT",
   "private": false,
   "workspaces": [
