--- a/packages/week-1/package.json
+++ b/packages/week-1/package.json
@@ -1,7 +1,15 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "hardhat:compile": "npx hardhat compile",
+    "hardhat:test": "npx hardhat test",
+    "hardhat:deploy": "npx hardhat run scripts/deploy.ts --network localhost"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.13.0",
     "hardhat": "^2.12.7"
   }
 }
