--- a/packages/week-2/tsconfig.json
+++ b/packages/week-2/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./scripts", "./tests", "./typechain-types"],
+  "include": ["./scripts", "./tests", "./typechain-types", "./utils"],
   "files": ["./hardhat.config.ts"],
   "compilerOptions": {
     "target": "es2020",
