--- a/packages/week-2/package.json
+++ b/packages/week-2/package.json
@@ -4,14 +4,15 @@
   "description": "You can use this as a good starting point for development",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "hardhat:deploy": "npx hardhat deploy proposal1 proposal2 proposal3"
+    "hardhat:deploy": "npx hardhat deploy proposal1 proposal2 proposal3",
+    "hardhat:give-right": "npx ts-node --files ./scripts/giveRightToVote.ts 0xe4D17421F3da44C1D94F2881da879407977f0242 0x7ee2d338B038120a5b43a9755402A580fE06bFB9"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
     "dotenv": "^16.0.3",
-    "hardhat": "^2.12.7"
+    "hardhat": "^2.12.7",
+    "ts-node": "^10.9.1"
   }
 }
