--- a/packages/_template/package.json
+++ b/packages/_template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice-0",
+  "name": "template",
   "version": "1.0.0",
   "description": "You can use this as a good starting point for development",
   "main": "index.js",
