--- a/packages/lesson-7-8-ballot/package.json
+++ b/packages/lesson-7-8-ballot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice-0",
+  "name": "lesson-7-8-ballot",
   "version": "1.0.0",
   "description": "You can use this as a good starting point for development",
   "main": "index.js",
