--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "packages/_template",
     "packages/lesson-7-8-ballot",
     "packages/lesson-9",
+    "packages/lesson-10",
     "packages/week-1",
     "packages/week-2"
   ]
