--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
 {
   "author": "Frank Pobocek <frank@pobocek.com>",
   "licence": "MIT",
-  "private": false,
-  "workspaces": [
-    "packages/_template",
-    "packages/lesson-7-8-ballot",
-    "packages/lesson-9",
-    "packages/lesson-10",
-    "packages/week-1",
-    "packages/week-2"
-  ]
+  "private": false
 }
