--- a/packages/lesson-13/.gitignore
+++ b/packages/lesson-13/.gitignore
@@ -1,23 +1,35 @@
-node_modules
-.env
-coverage
-coverage.json
-typechain
-typechain-types
+# compiled output
+/dist
+/node_modules
 
-# Hardhat files
-cache
-artifacts
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
+# OS
+.DS_Store
 
-node_modules
-.env
-coverage
-coverage.json
-typechain
-typechain-types
+# Tests
+/coverage
+/.nyc_output
 
-# Hardhat files
-cache
-artifacts
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
