--- a/packages/week-4/apps/api/package.json
+++ b/packages/week-4/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "lesson-13",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,6 +25,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
+    "contract": "*",
+    "ethers": "^5.7.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
