--- a/packages/week-4/package.json
+++ b/packages/week-4/package.json
@@ -2,6 +2,9 @@
   "name": "week-4",
   "version": "1.0.0",
   "private": "true",
+  "scripts": {
+    "start": "lerna run --parallel start"
+  },
   "workspaces": [
     "packages/*",
     "apps/*",
@@ -9,5 +12,10 @@
   ],
   "dependencies": {
     "ethers": "^5.7.2"
+  },
+  "devDependencies": {
+    "learna": "^1.0.1",
+    "lerna": "^6.5.1",
+    "typescript": "^4.9.5"
   }
 }
