Styles added to frontend

--- a/packages/week-4/package.json
+++ b/packages/week-4/package.json
@@ -11,6 +11,7 @@
     "docs/*"
   ],
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
