env example added properties

--- a/packages/week-4/apps/api/.env.example
+++ b/packages/week-4/apps/api/.env.example
@@ -1,7 +1,9 @@
 TOKEN_ADDRESS="xxx"
+BALLOT_ADDRESS="xxx"
 PRIVATE_KEY="xxx"
 PRIVATE_KEY2="xxx"
 INFURA_API_KEY="xxx"
 INFURA_API_SECRET="xxx"
 ALCHEMY_API_KEY="xxx"
+ALCHEMY_WS_KEY="xxx"
 ETHERSCAN_API_KEY="xxx"
