--- a/packages/week-4/package.json
+++ b/packages/week-4/package.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "hardhat": "^2.13.0"
   },
   "devDependencies": {
     "learna": "^1.0.1",
