--- a/packages/week-5/packages/contract/package.json
+++ b/packages/week-5/packages/contract/package.json
@@ -4,14 +4,8 @@
   "description": "You can use this as a good starting point for development",
   "main": "index.js",
   "scripts": {
-    "mint-tokens": "npx ts-node --files ./scripts/mintTokens.ts 0x15545Ed1515c1c7Fe216465F61F4d3Ca2F076AF5 0x4BaaD27a98D048295CC50509Fb99BC588926f368 10",
-    "give-minter-role": "npx ts-node --files ./scripts/giveMinterRole.ts 0x15545Ed1515c1c7Fe216465F61F4d3Ca2F076AF5 0x4BaaD27a98D048295CC50509Fb99BC588926f368 10",
-    "delegate-voting-power": "npx ts-node --files ./scripts/delegateVotingPower.ts 0x15545Ed1515c1c7Fe216465F61F4d3Ca2F076AF5",
-    "cast-votes": "npx ts-node --files ./scripts/castVotes.ts 0x681782241a0664F8221e1C5D531D05D88A8Cc9a3 3 4",
-    "results": "npx ts-node --files ./scripts/queryResults.ts 0x681782241a0664F8221e1C5D531D05D88A8Cc9a3",
-    "hardhat:deploy-token": "npx hardhat deploy-token",
-    "hardhat:deploy-ballot": "npx hardhat deploy-ballot --tokenaddress 0x15545Ed1515c1c7Fe216465F61F4d3Ca2F076AF5 'counter-strike: 1.6' 'counter-strike: Source' 'counter-strike: Promod' 'counter-strike: GO'",
-    "hardhat:votes": "npx hardhat run scripts/ERC20Votes.ts"
+    "start": "npx hardhat run ./scripts/lottery.ts",
+    "start-local": "npx hardhat run ./scripts/lottery-local.ts"
   },
   "author": "",
   "license": "ISC",
