--- a/packages/week-5/apps/frontend/package.json
+++ b/packages/week-5/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.2"
