--- a/packages/final/api/package.json
+++ b/packages/final/api/package.json
@@ -21,8 +21,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.3.12",
+    "@nestjs/swagger": "^6.2.1",
+    "@nestjs/websockets": "^9.3.12",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
