--- a/packages/final/api/package.json
+++ b/packages/final/api/package.json
@@ -23,12 +23,16 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.12",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/websockets": "^9.3.12",
+    "mongoose": "^7.0.3",
+    "nestjs-command": "^3.1.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "yargs": "^17.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -38,6 +42,7 @@
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
+    "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
