--- a/packages/final/app/package.json
+++ b/packages/final/app/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.12.4",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.8",
     "alchemy-sdk": "^2.6.2",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "ethers": "^5.7.1",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "siwe": "^2.0.5",
     "wagmi": "^0.12.6"
   },
   "devDependencies": {
