--- a/packages/final/contract/.env.example
+++ b/packages/final/contract/.env.example
@@ -1,6 +1,9 @@
 MNEMONIC="here is where your twelve words mnemonic should be put my friend"
 PRIVATE_KEY="<your private key here if you don't have a mnemonic seed>"
+PRIVATE_KEY2="<your private key here if you don't have a mnemonic seed>"
 INFURA_API_KEY="********************************"
 INFURA_API_SECRET="********************************"
 ALCHEMY_API_KEY="********************************"
 ETHERSCAN_API_KEY="********************************"
+NETWORK="goerli"
+NFT_STORAGE_KEY=""
