--- a/packages/final/contract/.gitignore
+++ b/packages/final/contract/.gitignore
@@ -1,14 +1,14 @@
-node_modules
-.env
-coverage
-coverage.json
-typechain
-typechain-types
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
-# Hardhat files
-cache
-artifacts
-
+# Swap the comments on the following lines if you don't wish to use zero-installs
+# Documentation here: https://yarnpkg.com/features/zero-installs
+!.yarn/cache
+#.pnp.*
 
 node_modules
 .env
