--- a/packages/final/contract/tsconfig.json
+++ b/packages/final/contract/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["./scripts", "./tests", "./typechain-types", "./utils"],
+  "include": ["./scripts", "./tests", "./typechain-types"],
   "files": ["./hardhat.config.ts"],
   "compilerOptions": {
     "target": "es2020",
@@ -7,6 +7,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   }
 }
