--- a/packages/final/app/package.json
+++ b/packages/final/app/package.json
@@ -12,6 +12,7 @@
     "@rainbow-me/rainbowkit": "^0.12.4",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.8",
     "alchemy-sdk": "^2.6.2",
+    "axios": "^1.3.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "ethers": "^5.7.1",
