--- a/packages/final/app/package.json
+++ b/packages/final/app/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^0.12.4",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.8",
+    "@tailwindcss/typography": "^0.5.9",
     "alchemy-sdk": "^2.6.2",
     "axios": "^1.3.4",
+    "daisyui": "^2.51.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "ethers": "^5.7.1",
