--- a/packages/final/contract/package.json
+++ b/packages/final/contract/package.json
@@ -7,7 +7,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
@@ -25,6 +25,7 @@
     "typescript": ">=4.5.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.2",
     "@types/mime": "^3.0.1",
     "@types/mime-types": "^2.1.1",
     "blob": "^0.1.0",
@@ -32,6 +33,7 @@
     "files-from-path": "^1.0.0",
     "jimp": "^0.22.7",
     "nft.storage": "^7.0.3",
+    "readline": "^1.3.0",
     "web3.storage": "^4.5.4"
   }
 }
