--- a/packages/final/api/package.json
+++ b/packages/final/api/package.json
@@ -28,8 +28,10 @@
     "@nestjs/platform-socket.io": "^9.3.12",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/websockets": "^9.3.12",
+    "isomorphic-fetch": "^3.0.0",
     "mongoose": "^7.0.3",
     "nestjs-command": "^3.1.3",
+    "next-auth": "^4.20.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "yargs": "^17.7.1"
@@ -40,6 +42,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
     "@types/yargs": "^17.0.24",
