--- a/packages/final/app/package.json
+++ b/packages/final/app/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^4.28.0",
     "alchemy-sdk": "^2.6.2",
     "axios": "^1.3.4",
+    "classnames": "^2.3.2",
     "daisyui": "^2.51.5",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
