--- a/packages/final/api/package.json
+++ b/packages/final/api/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-socket.io": "^9.3.12",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/websockets": "^9.3.12",
+    "alchemy-sdk": "^2.7.0",
+    "dotenv": "^16.0.3",
     "mongoose": "^7.0.3",
     "nestjs-command": "^3.1.3",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +39,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.2",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
@@ -47,6 +50,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "ethers": "^5.7.2",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
